--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -1,4 +1,4 @@
-doctype 5
+doctype html
 html lang="en"
   head
     meta charset="UTF-8"
@@ -6,3 +6,4 @@ html lang="en"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
   body
+    = yield
